Update sticky layers in tree order after scroll.

The position of a nested sticky layer depends on the position of its
sticky ancestor.  If the ancestor hasn't been positioned, we get the
wrong offset from StickyPositionScrollingConstraints.

PLSA's iteration over the StickyConstraintsMap has unspecified ordering.
Instead, use the recursive tree walk of UpdateLayerPositionRecursive
(but preserve the optimization of skipping non-sticky layers when the
root PLSA is scrolled).

Bug: 821216
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I61ca51a69fdbb857d88713afcdd92f8615930cd1
Reviewed-on: https://chromium-review.googlesource.com/963516
Reviewed-by: Stefan Zager <szager@chromium.org>
Commit-Queue: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543841}
Former-commit-id: a3c8efc97aaa9b71a8ea664bdfb3f8d2b527512e