third_party/WebKit/Source/core/paint/PaintLayer.cpp
@@ -312,11 +312,26 @@ void PaintLayer::UpdateLayerPositionsAfterLayout() {
   }
 }
 
-void PaintLayer::UpdateLayerPositionRecursive() {
-  UpdateLayerPosition();
+void PaintLayer::UpdateLayerPositionRecursive(
+    UpdateLayerPositionBehavior behavior) {
+  switch (behavior) {
+    case AllLayers:
+      UpdateLayerPosition();
+      break;
+    case OnlyStickyLayers:
+      if (GetLayoutObject().Style()->HasStickyConstrainedPosition())
+        UpdateLayerPosition();
+      if (PaintLayerScrollableArea* scroller = GetScrollableArea()) {
+        if (!scroller->HasStickyDescendants())
+          return;
+      }
+      break;
+    default:
+      NOTREACHED();
+  }
 
   for (PaintLayer* child = FirstChild(); child; child = child->NextSibling())
-    child->UpdateLayerPositionRecursive();
+    child->UpdateLayerPositionRecursive(behavior);
 }
 
 void PaintLayer::UpdateHasSelfPaintingLayerDescendant() const {
@@ -398,16 +413,17 @@ bool PaintLayer::ScrollsWithRespectTo(const PaintLayer* other) const {
 }
 
 void PaintLayer::UpdateLayerPositionsAfterOverflowScroll() {
-  // The root PaintLayer (i.e. the LayoutView) is special, in that scroll offset
-  // is not included in clip rects. Therefore, we do not need to clear them
-  // when that PaintLayer is scrolled. We also don't need to update layer
-  // positions, because they also do not depend on the root's scroll offset.
   if (IsRootLayer()) {
-    GetScrollableArea()->UpdateLayerPositionForStickyDescendants();
-  } else {
-    ClearClipRects();
-    UpdateLayerPositionRecursive();
+    // The root PaintLayer (i.e. the LayoutView) is special, in that scroll
+    // offset is not included in clip rects. Therefore, we do not need to clear
+    // them when that PaintLayer is scrolled. We also don't need to update layer
+    // positions, because they also do not depend on the root's scroll offset.
+    if (GetScrollableArea()->HasStickyDescendants())
+      UpdateLayerPositionRecursive(OnlyStickyLayers);
+    return;
   }
+  ClearClipRects();
+  UpdateLayerPositionRecursive(AllLayers);
 }
 
 void PaintLayer::UpdateTransformationMatrix() {
